Allow vncproxy to work with ssl enabled
Right now our vncproxy settings are hard-coded to http and the
non-ssl port.  This change adds a vncproxy entry to the endpoint
map and uses those values to configure the proxy correctly on
compute nodes.  This is sufficient to get it working in my
environment with ssl enabled.

Change-Id: I9d69b088eef4700959b33c7e0eb44932949d7b71
(cherry picked from commit dd7602ad82100617126be26d80a6d3f67cb739ac)

--- a/environments/enable-tls.yaml
+++ b/environments/enable-tls.yaml
@@ -33,6 +33,9 @@ parameter_defaults:
     NovaEC2Admin: {protocol: 'http', port: '8773', host: 'IP_ADDRESS'}
     NovaEC2Internal: {protocol: 'http', port: '8773', host: 'IP_ADDRESS'}
     NovaEC2Public: {protocol: 'https', port: '13773', host: 'CLOUDNAME'}
+    NovaVNCProxyAdmin: {protocol: 'http', port: '6080', host: 'IP_ADDRESS'}
+    NovaVNCProxyInternal: {protocol: 'http', port: '6080', host: 'IP_ADDRESS'}
+    NovaVNCProxyPublic: {protocol: 'https', port: '13080', host: 'CLOUDNAME'}
     SwiftAdmin: {protocol: 'http', port: '8080', host: 'IP_ADDRESS'}
     SwiftInternal: {protocol: 'http', port: '8080', host: 'IP_ADDRESS'}
     SwiftPublic: {protocol: 'https', port: '13808', host: 'CLOUDNAME'}
