--- a/network/endpoints/endpoint_map.yaml
+++ b/network/endpoints/endpoint_map.yaml
@@ -71,6 +71,9 @@ parameters:
       NovaEC2Admin: {protocol: 'http', port: '8773', host: 'IP_ADDRESS'}
       NovaEC2Internal: {protocol: 'http', port: '8773', host: 'IP_ADDRESS'}
       NovaEC2Public: {protocol: 'http', port: '8773', host: 'IP_ADDRESS'}
+      NovaVNCProxyAdmin: {protocol: 'http', port: '6080', host: 'IP_ADDRESS'}
+      NovaVNCProxyInternal: {protocol: 'http', port: '6080', host: 'IP_ADDRESS'}
+      NovaVNCProxyPublic: {protocol: 'http', port: '6080', host: 'IP_ADDRESS'}
       SwiftAdmin: {protocol: 'http', port: '8080', host: 'IP_ADDRESS'}
       SwiftInternal: {protocol: 'http', port: '8080', host: 'IP_ADDRESS'}
       SwiftPublic: {protocol: 'http', port: '8080', host: 'IP_ADDRESS'}
@@ -358,6 +361,28 @@ resources:
       CloudName: {get_param: CloudName}
       UriSuffix: '/services/Admin'
 
+  NovaVNCProxyInternal:
+    type: OS::TripleO::Endpoint
+    properties:
+      EndpointName: NovaVNCProxyInternal
+      EndpointMap: { get_param: EndpointMap }
+      IP: {get_param: NovaApiVirtualIP}
+      CloudName: {get_param: CloudName}
+  NovaVNCProxyPublic:
+    type: OS::TripleO::Endpoint
+    properties:
+      EndpointName: NovaVNCProxyPublic
+      EndpointMap: { get_param: EndpointMap }
+      IP: {get_param: PublicVirtualIP}
+      CloudName: {get_param: CloudName}
+  NovaVNCProxyAdmin:
+    type: OS::TripleO::Endpoint
+    properties:
+      EndpointName: NovaVNCProxyAdmin
+      EndpointMap: { get_param: EndpointMap }
+      IP: {get_param: NovaApiVirtualIP}
+      CloudName: {get_param: CloudName}
+
   SwiftInternal:
     type: OS::TripleO::Endpoint
     properties:
@@ -442,6 +467,9 @@ outputs:
       NovaEC2Internal: {get_attr: [ NovaEC2Internal, endpoint] }
       NovaEC2Public: {get_attr: [ NovaEC2Public, endpoint] }
       NovaEC2Admin: {get_attr: [ NovaEC2Admin, endpoint] }
+      NovaVNCProxyInternal: {get_attr: [ NovaVNCProxyInternal, endpoint] }
+      NovaVNCProxyPublic: {get_attr: [ NovaVNCProxyPublic, endpoint] }
+      NovaVNCProxyAdmin: {get_attr: [ NovaVNCProxyAdmin, endpoint] }
       SwiftInternal: {get_attr: [ SwiftInternal, endpoint] }
       SwiftPublic: {get_attr: [ SwiftPublic, endpoint] }
       SwiftAdmin: {get_attr: [ SwiftAdmin, endpoint] }
