Add Rabbit IPv6 only support
Adds Rabbit environment variable required for IPv6 only support

Change-Id: Iec209ca83a5b0708ac828c4afaf9d2222e597f24

--- a/puppet/controller.yaml
+++ b/puppet/controller.yaml
@@ -617,6 +617,10 @@ parameters:
     default: 16384
     description: Configures RabbitMQ FD limit
     type: string
+  RabbitIPv6:
+    default: false
+    description: Enable IPv6 in RabbitMQ
+    type: boolean
   RedisVirtualIP:
     type: string
     default: ''  # Has to be here because of the ignored empty value bug
@@ -1185,6 +1189,7 @@ resources:
         rabbit_cookie: {get_param: RabbitCookie}
         rabbit_client_use_ssl: {get_param: RabbitClientUseSSL}
         rabbit_client_port: {get_param: RabbitClientPort}
+        rabbit_ipv6: {get_param: RabbitIPv6}
         mongodb_no_journal: {get_param: MongoDbNoJournal}
         mongodb_ipv6: {get_param: MongoDbIPv6}
         # We need to force this into quotes or hiera will return integer causing
@@ -1603,6 +1608,7 @@ resources:
                 rabbitmq::file_limit: {get_input: rabbit_fd_limit}
                 rabbitmq::default_user: {get_input: rabbit_username}
                 rabbitmq::default_pass: {get_input: rabbit_password}
+                rabbit_ipv6: {get_input: rabbit_ipv6}
                 # Redis
                 redis::bind: {get_input: redis_network}
                 redis_vip: {get_input: redis_vip}
