--- a/environments/network-isolation-v6.yaml
+++ b/environments/network-isolation-v6.yaml
@@ -49,3 +49,5 @@ parameter_defaults:
   MongoDbIPv6: True
   # Enable various IPv6 features in Nova.
   NovaIPv6: True
+  # Enable IPv6 environment for RabbitMQ.
+  RabbitIPv6: true
