Fix tunnel_types hieradata on compute nodes
There was a missing : in the hieradata for the compute nodes that
caused tunnel_types to not be configured.  This also made it
impossible to boot instances on tunneled networks because the port
binding always failed.

Change-Id: Icc2a45aa9514ce62497f91e6abe9261d1c1374ed
Closes-Bug: 1534349
(cherry picked from commit 11c5ab45017de16a06de7f4a7eed814dd5efcc25)

--- a/puppet/compute.yaml
+++ b/puppet/compute.yaml
@@ -454,7 +454,7 @@ resources:
                 neutron::agents::ml2::ovs::local_ip: {get_input: neutron_local_ip}
 
                 neutron::plugins::ml2::tenant_network_types: {get_input: neutron_tenant_network_types}
-                neutron::agents::ml2::ovs:tunnel_types: {get_input: neutron_tunnel_types}
+                neutron::agents::ml2::ovs::tunnel_types: {get_input: neutron_tunnel_types}
                 neutron::plugins::ml2::network_vlan_ranges: {get_input: neutron_network_vlan_ranges}
                 neutron::plugins::ml2::tunnel_id_ranges: {get_input: neutron_tunnel_id_ranges}
                 neutron::plugins::ml2::vni_ranges: {get_input: neutron_vni_ranges}
