Permits configuration of Cinder enabled_backend via hieradata
It is currently possible to provide arbitrary config settings for
Cinder using the "cinder::config::cinder_config:" hiera key. To add
a backend though particular one has to edit the list of enabled
backends in Cinder too which isn't possible. This change will make
it possible using a user-customizable array of backends to be enabled.

Change-Id: Ic664c1c2b0f7b1b4b6be8b5064a38650694d4857
(cherry picked from commit dbe67005a59f90a1ffe8e2d8b550ec5d6ca27a7e)

--- a/puppet/hieradata/controller.yaml
+++ b/puppet/hieradata/controller.yaml
@@ -90,6 +90,7 @@ nova::notification_driver: messaging
 cinder::scheduler::scheduler_driver: cinder.scheduler.filter_scheduler.FilterScheduler
 cinder::cron::db_purge::destination: '/dev/null'
 cinder::host: hostgroup
+cinder_user_enabled_backends: []
 
 # heat
 heat::engine::configure_delegated_roles: false
