--- a/puppet/hieradata/controller.yaml
+++ b/puppet/hieradata/controller.yaml
@@ -99,6 +99,7 @@ ceilometer::agent::auth::auth_endpoint_type: 'internalURL'
 cinder::scheduler::scheduler_driver: cinder.scheduler.filter_scheduler.FilterScheduler
 cinder::cron::db_purge::destination: '/dev/null'
 cinder::host: hostgroup
+cinder_user_enabled_backends: []
 
 # heat
 heat::engine::configure_delegated_roles: false
