Revert "Revert "neutron: enable nova-event-callback by default""
This reverts commit d8357912cfd1519b94ae8fe01bc6ad3c583a5d0f.

A fix is coming that will make this work properly, and we definitely
want notifications turned on.

Change-Id: Id049078c288979551d8ca11810be2fcf538a0f42

--- a/os-apply-config/controller.yaml
+++ b/os-apply-config/controller.yaml
@@ -558,6 +558,9 @@ parameters:
   NeutronApiVirtualIP:
     type: string
     default: ''
+  NovaApiVirtualIP:
+    type: string
+    default: ''
   ServiceNetMap:
     default: {}
     description: Mapping of service_name -> network name. Typically set
