--- a/extraconfig/tasks/major_upgrade_pacemaker.yaml
+++ b/extraconfig/tasks/major_upgrade_pacemaker.yaml
@@ -2,7 +2,15 @@ heat_template_version: 2014-10-16
 description: 'Upgrade for Pacemaker deployments'
 
 parameters:
-  servers:
+  controller_servers:
+    type: json
+  compute_servers:
+    type: json
+  blockstorage_servers:
+    type: json
+  objectstorage_servers:
+    type: json
+  cephstorage_servers:
     type: json
   input_values:
     type: json
@@ -17,12 +25,12 @@ resources:
         list_join:
         - ''
         - - get_file: pacemaker_common_functions.sh
-          - get_file: major_upgrade_pacemaker_1.sh
+          - get_file: major_upgrade_controller_pacemaker_1.sh
 
   ControllerPacemakerUpgradeDeployment_Step1:
     type: OS::Heat::SoftwareDeploymentGroup
     properties:
-      servers:  {get_param: servers}
+      servers:  {get_param: controller_servers}
       config: {get_resource: ControllerPacemakerUpgradeConfig_Step1}
       input_values: {get_param: input_values}
 
@@ -34,12 +42,12 @@ resources:
         list_join:
         - ''
         - - get_file: pacemaker_common_functions.sh
-          - get_file: major_upgrade_pacemaker_2.sh
+          - get_file: major_upgrade_controller_pacemaker_2.sh
 
-  ControllerPacemakerUpgrade2Deployment_Step2:
+  ControllerPacemakerUpgradeDeployment_Step2:
     type: OS::Heat::SoftwareDeploymentGroup
     depends_on: ControllerPacemakerUpgradeDeployment_Step1
     properties:
-      servers:  {get_param: servers}
+      servers:  {get_param: controller_servers}
       config: {get_resource: ControllerPacemakerUpgradeConfig_Step2}
       input_values: {get_param: input_values}
