Make the Neutron subnet ipv6_{ra,address}_mode configurable
Use of slaac does not permit stati assignment of IPs to a Neutron
port, so we default to dhcpv6-stateful instead.

Change-Id: Id7f104be60ae05785a3d0a33516d7875a4698ed1

--- a/network/external_v6.yaml
+++ b/network/external_v6.yaml
@@ -34,6 +34,14 @@ parameters:
     default: [{'start': '2001:db8:fd00:1000::10', 'end': '2001:db8:fd00:1000:ffff:ffff:ffff:fffe'}]
     description: Ip allocation pool range for the external network.
     type: json
+  IPv6AddressMode:
+    default: dhcpv6-stateful
+    description: Neutron subnet IPv6 address mode
+    type: string
+  IPv6RAMode:
+    default: dhcpv6-stateful
+    description: Neutron subnet IPv6 router advertisement mode
+    type: string
 
 resources:
   ExternalNetwork:
@@ -48,8 +56,8 @@ resources:
     type: OS::Neutron::Subnet
     properties:
       ip_version: 6
-      ipv6_address_mode: slaac
-      ipv6_ra_mode: slaac
+      ipv6_address_mode: {get_param: IPv6AddressMode}
+      ipv6_ra_mode: {get_param: IPv6RAMode}
       cidr: {get_param: ExternalNetCidr}
       name: {get_param: ExternalSubnetName}
       network: {get_resource: ExternalNetwork}
