--- a/network/storage_mgmt_v6.yaml
+++ b/network/storage_mgmt_v6.yaml
@@ -34,6 +34,14 @@ parameters:
     default: [{'start': 'fd00:fd00:fd00:4000::10', 'end': 'fd00:fd00:fd00:4000:ffff:ffff:ffff:fffe'}]
     description: Ip allocation pool range for the storage mgmt network.
     type: json
+  IPv6AddressMode:
+    default: dhcpv6-stateful
+    description: Neutron subnet IPv6 address mode
+    type: string
+  IPv6RAMode:
+    default: dhcpv6-stateful
+    description: Neutron subnet IPv6 router advertisement mode
+    type: string
 
 resources:
   StorageMgmtNetwork:
@@ -48,8 +56,8 @@ resources:
     type: OS::Neutron::Subnet
     properties:
       ip_version: 6
-      ipv6_address_mode: slaac
-      ipv6_ra_mode: slaac
+      ipv6_address_mode: {get_param: IPv6AddressMode}
+      ipv6_ra_mode: {get_param: IPv6RAMode}
       cidr: {get_param: StorageMgmtNetCidr}
       name: {get_param: StorageMgmtSubnetName}
       network: {get_resource: StorageMgmtNetwork}
