Support the deployment of Ceph over IPv6
To deploy Ceph on IPv6, we need to enable ms_bind_ipv6 in addition
to passing the list of MON IPs in brackets.

Change-Id: I3644b8fc06458e68574afa5573f07442f0a09190
(cherry picked from commit 99cdabc403e5e9ff66182526ff6c577bdc1f9164)

--- a/puppet/extraconfig/ceph/ceph-external-config.yaml
+++ b/puppet/extraconfig/ceph/ceph-external-config.yaml
@@ -41,6 +41,9 @@ parameters:
   CephClientUserName:
     default: openstack
     type: string
+  CephIPv6:
+    default: False
+    type: boolean
 
 resources:
   CephClusterConfigImpl:
@@ -54,7 +57,9 @@ resources:
               mapped_data:
                 ceph_storage_count: {get_param: ceph_storage_count}
                 enable_external_ceph: true
-                ceph::profile::params::mon_host: {get_param: ceph_external_mon_ips}
+                ceph_ipv6: {get_param: CephIPv6}
+                ceph_mon_host: {get_param: ceph_external_mon_ips}
+                ceph_mon_host_v6: {get_param: ceph_external_mon_ips}
                 ceph::profile::params::fsid: {get_param: ceph_fsid}
                 ceph::profile::params::client_keys:
                   str_replace:
@@ -72,6 +77,7 @@ resources:
                       NOVA_POOL: {get_param: NovaRbdPoolName}
                       CINDER_POOL: {get_param: CinderRbdPoolName}
                       GLANCE_POOL: {get_param: GlanceRbdPoolName}
+                ceph::profile::params::ms_bind_ipv6: {get_param: CephIPv6}
                 nova::compute::rbd::libvirt_images_rbd_pool: {get_param: NovaRbdPoolName}
                 cinder_rbd_pool_name: {get_param: CinderRbdPoolName}
                 glance::backend::rbd::rbd_store_pool: {get_param: GlanceRbdPoolName}
