--- a/environments/network-isolation-v6.yaml
+++ b/environments/network-isolation-v6.yaml
@@ -43,6 +43,8 @@ resource_registry:
   OS::TripleO::BlockStorage::Ports::StorageMgmtPort: ../network/ports/storage_mgmt_v6.yaml
 
 parameter_defaults:
+  # Enable IPv6 for Ceph.
+  CephIPv6: True
   # Enable IPv6 for Corosync. This is required when Corosync is using an IPv6 IP in the cluster.
   CorosyncIPv6: True
   # Enable IPv6 for MongoDB. This is required when MongoDB is using an IPv6 IP.
