--- a/puppet/compute.yaml
+++ b/puppet/compute.yaml
@@ -118,6 +118,15 @@ parameters:
     default: nic1
     description: A port to add to the NeutronPhysicalBridge.
     type: string
+  NeutronTenantMtu:
+    description: >
+      The default MTU for tenant networks. For VXLAN/GRE tunneling, this should
+      be at least 50 bytes smaller than the MTU on the physical network. This
+      value will be used to set the MTU on the virtual Ethernet device.
+      This number is related to the value of NeutronDnsmasqOptions, since that
+      will determine the MTU that is assigned to the VM host through DHCP.
+    default: 1400
+    type: number
   NeutronTunnelTypes:
     type: comma_delimited_list
     description: |
@@ -463,6 +472,7 @@ resources:
                 nova::compute::rbd::ephemeral_storage: {get_input: nova_enable_rbd_backend}
                 rbd_persistent_storage: {get_input: cinder_enable_rbd_backend}
                 nova_password: {get_input: nova_password}
+                nova::compute::network_device_mtu: {get_input: neutron_tenant_mtu}
                 nova::compute::vncserver_proxyclient_address: {get_input: nova_vnc_proxyclient_address}
                 nova::network::neutron::neutron_ovs_bridge: {get_input: nova_ovs_bridge}
                 nova::network::neutron::security_group_api: {get_input: nova_security_group_api}
@@ -487,6 +497,7 @@ resources:
                 neutron_host: {get_input: neutron_host}
                 neutron::agents::ml2::ovs::local_ip: {get_input: neutron_local_ip}
 
+                neutron::network_device_mtu: {get_input: neutron_tenant_mtu}
                 neutron::plugins::ml2::tenant_network_types: {get_input: neutron_tenant_network_types}
                 neutron::agents::ml2::ovs::tunnel_types: {get_input: neutron_tunnel_types}
                 neutron::agents::ml2::ovs::extensions: {get_input: neutron_agent_extensions}
@@ -581,6 +592,7 @@ resources:
             template: MAPPINGS
             params:
               MAPPINGS: {get_param: NeutronBridgeMappings}
+        neutron_tenant_mtu: {get_param: NeutronTenantMtu}
         neutron_enable_tunneling: {get_param: NeutronEnableTunnelling}
         neutron_enable_l2pop: {get_param: NeutronEnableL2Pop}
         neutron_physical_bridge: {get_param: NeutronPhysicalBridge}
