Add NovaVNCProxy back into endpoint_map
Due to an incorrect rebase, d0dcb9401c868786df58f5801a431392b8e89df8
dropped the changes made in dd7602ad82100617126be26d80a6d3f67cb739ac to
add a vncproxy to the endpoint map. This change restores them.

Change-Id: Ifef7f955481405d5fe39ba48c8b1a79aa9c170f2

--- a/network/endpoints/endpoint_data.yaml
+++ b/network/endpoints/endpoint_data.yaml
@@ -151,6 +151,15 @@ NovaEC2:
             '': /services/Admin
     port: 8773
 
+NovaVNCProxy:
+    Internal:
+        vip_param: NovaApi
+    Public:
+        vip_param: Public
+    Admin:
+        vip_param: NovaApi
+    port: 6080
+
 Swift:
     Internal:
         vip_param: SwiftProxy
