--- a/network/endpoints/endpoint_map.yaml
+++ b/network/endpoints/endpoint_map.yaml
@@ -52,6 +52,9 @@ parameters:
       NovaEC2Admin: {protocol: http, port: '8773', host: IP_ADDRESS}
       NovaEC2Internal: {protocol: http, port: '8773', host: IP_ADDRESS}
       NovaEC2Public: {protocol: http, port: '8773', host: IP_ADDRESS}
+      NovaVNCProxyAdmin: {protocol: http, port: '6080', host: IP_ADDRESS}
+      NovaVNCProxyInternal: {protocol: http, port: '6080', host: IP_ADDRESS}
+      NovaVNCProxyPublic: {protocol: http, port: '6080', host: IP_ADDRESS}
       SaharaAdmin: {protocol: http, port: '8386', host: IP_ADDRESS}
       SaharaInternal: {protocol: http, port: '8386', host: IP_ADDRESS}
       SaharaPublic: {protocol: http, port: '8386', host: IP_ADDRESS}
@@ -1535,6 +1538,120 @@ outputs:
                   IP_ADDRESS: {get_param: PublicVirtualIP}
             - ':'
             - get_param: [EndpointMap, NovaEC2Public, port]
+      NovaVNCProxyAdmin:
+        host:
+          str_replace:
+            template:
+              get_param: [EndpointMap, NovaVNCProxyAdmin, host]
+            params:
+              CLOUDNAME: {get_param: CloudName}
+              IP_ADDRESS: {get_param: NovaApiVirtualIP}
+        port:
+          get_param: [EndpointMap, NovaVNCProxyAdmin, port]
+        protocol:
+          get_param: [EndpointMap, NovaVNCProxyAdmin, protocol]
+        uri:
+          list_join:
+          - ''
+          - - get_param: [EndpointMap, NovaVNCProxyAdmin, protocol]
+            - ://
+            - str_replace:
+                template:
+                  get_param: [EndpointMap, NovaVNCProxyAdmin, host]
+                params:
+                  CLOUDNAME: {get_param: CloudName}
+                  IP_ADDRESS: {get_param: NovaApiVirtualIP}
+            - ':'
+            - get_param: [EndpointMap, NovaVNCProxyAdmin, port]
+        uri_no_suffix:
+          list_join:
+          - ''
+          - - get_param: [EndpointMap, NovaVNCProxyAdmin, protocol]
+            - ://
+            - str_replace:
+                template:
+                  get_param: [EndpointMap, NovaVNCProxyAdmin, host]
+                params:
+                  CLOUDNAME: {get_param: CloudName}
+                  IP_ADDRESS: {get_param: NovaApiVirtualIP}
+            - ':'
+            - get_param: [EndpointMap, NovaVNCProxyAdmin, port]
+      NovaVNCProxyInternal:
+        host:
+          str_replace:
+            template:
+              get_param: [EndpointMap, NovaVNCProxyInternal, host]
+            params:
+              CLOUDNAME: {get_param: CloudName}
+              IP_ADDRESS: {get_param: NovaApiVirtualIP}
+        port:
+          get_param: [EndpointMap, NovaVNCProxyInternal, port]
+        protocol:
+          get_param: [EndpointMap, NovaVNCProxyInternal, protocol]
+        uri:
+          list_join:
+          - ''
+          - - get_param: [EndpointMap, NovaVNCProxyInternal, protocol]
+            - ://
+            - str_replace:
+                template:
+                  get_param: [EndpointMap, NovaVNCProxyInternal, host]
+                params:
+                  CLOUDNAME: {get_param: CloudName}
+                  IP_ADDRESS: {get_param: NovaApiVirtualIP}
+            - ':'
+            - get_param: [EndpointMap, NovaVNCProxyInternal, port]
+        uri_no_suffix:
+          list_join:
+          - ''
+          - - get_param: [EndpointMap, NovaVNCProxyInternal, protocol]
+            - ://
+            - str_replace:
+                template:
+                  get_param: [EndpointMap, NovaVNCProxyInternal, host]
+                params:
+                  CLOUDNAME: {get_param: CloudName}
+                  IP_ADDRESS: {get_param: NovaApiVirtualIP}
+            - ':'
+            - get_param: [EndpointMap, NovaVNCProxyInternal, port]
+      NovaVNCProxyPublic:
+        host:
+          str_replace:
+            template:
+              get_param: [EndpointMap, NovaVNCProxyPublic, host]
+            params:
+              CLOUDNAME: {get_param: CloudName}
+              IP_ADDRESS: {get_param: PublicVirtualIP}
+        port:
+          get_param: [EndpointMap, NovaVNCProxyPublic, port]
+        protocol:
+          get_param: [EndpointMap, NovaVNCProxyPublic, protocol]
+        uri:
+          list_join:
+          - ''
+          - - get_param: [EndpointMap, NovaVNCProxyPublic, protocol]
+            - ://
+            - str_replace:
+                template:
+                  get_param: [EndpointMap, NovaVNCProxyPublic, host]
+                params:
+                  CLOUDNAME: {get_param: CloudName}
+                  IP_ADDRESS: {get_param: PublicVirtualIP}
+            - ':'
+            - get_param: [EndpointMap, NovaVNCProxyPublic, port]
+        uri_no_suffix:
+          list_join:
+          - ''
+          - - get_param: [EndpointMap, NovaVNCProxyPublic, protocol]
+            - ://
+            - str_replace:
+                template:
+                  get_param: [EndpointMap, NovaVNCProxyPublic, host]
+                params:
+                  CLOUDNAME: {get_param: CloudName}
+                  IP_ADDRESS: {get_param: PublicVirtualIP}
+            - ':'
+            - get_param: [EndpointMap, NovaVNCProxyPublic, port]
       SaharaAdmin:
         host:
           str_replace:
