Fix endpoint names
The commit daad3d4224f12d2c23c41a70cdf522e7c55536ba added a bunch of new
endpoints, but failed to use the new input data in calculating the
outputs: the GlanceRegistry ones use the Glance endpoints and the
Horizon one the Heat endpoint. This would cause anything querying these
endpoints from the endpoints map to get the wrong ports.

Change-Id: I8e1780b26e285187142be41b4f3aae3efe7eaaee

--- a/network/endpoints/endpoint_map.yaml
+++ b/network/endpoints/endpoint_map.yaml
@@ -185,19 +185,19 @@ resources:
   GlanceRegistryInternal:
     type: OS::TripleO::Endpoint
     properties:
-      EndpointName: GlanceInternal
+      EndpointName: GlanceRegistryInternal
       EndpointMap: { get_param: EndpointMap }
       IP: {get_param: GlanceRegistryVirtualIP}
   GlanceRegistryPublic:
     type: OS::TripleO::Endpoint
     properties:
-      EndpointName: GlancePublic
+      EndpointName: GlanceRegistryPublic
       EndpointMap: { get_param: EndpointMap }
       IP: {get_param: PublicVirtualIP}
   GlanceRegistryAdmin:
     type: OS::TripleO::Endpoint
     properties:
-      EndpointName: GlanceAdmin
+      EndpointName: GlanceRegistryAdmin
       EndpointMap: { get_param: EndpointMap }
       IP: {get_param: GlanceRegistryVirtualIP}
 
@@ -229,7 +229,7 @@ resources:
   HorizonPublic:
     type: OS::TripleO::Endpoint
     properties:
-      EndpointName: HeatPublic
+      EndpointName: HorizonPublic
       EndpointMap: { get_param: EndpointMap }
       IP: {get_param: PublicVirtualIP}
       CloudName: {get_param: CloudName}
