--- a/network/endpoints/endpoint_map.yaml
+++ b/network/endpoints/endpoint_map.yaml
@@ -182,19 +182,19 @@ resources:
   GlanceRegistryInternal:
     type: OS::TripleO::Endpoint
     properties:
-      EndpointName: GlanceInternal
+      EndpointName: GlanceRegistryInternal
       EndpointMap: { get_param: EndpointMap }
       IP: {get_param: GlanceRegistryVirtualIP}
   GlanceRegistryPublic:
     type: OS::TripleO::Endpoint
     properties:
-      EndpointName: GlancePublic
+      EndpointName: GlanceRegistryPublic
       EndpointMap: { get_param: EndpointMap }
       IP: {get_param: PublicVirtualIP}
   GlanceRegistryAdmin:
     type: OS::TripleO::Endpoint
     properties:
-      EndpointName: GlanceAdmin
+      EndpointName: GlanceRegistryAdmin
       EndpointMap: { get_param: EndpointMap }
       IP: {get_param: GlanceRegistryVirtualIP}
 
@@ -226,7 +226,7 @@ resources:
   HorizonPublic:
     type: OS::TripleO::Endpoint
     properties:
-      EndpointName: HeatPublic
+      EndpointName: HorizonPublic
       EndpointMap: { get_param: EndpointMap }
       IP: {get_param: PublicVirtualIP}
       CloudName: {get_param: CloudName}
