--- a/puppet/hieradata/common.yaml
+++ b/puppet/hieradata/common.yaml
@@ -23,6 +23,11 @@ sysctl_settings:
     value: 5
   net.ipv4.tcp_keepalive_time:
     value: 5
+  # prevent neutron bridges from autoconfiguring ipv6 addresses
+  net.ipv6.conf.default.accept_ra:
+    value: 0
+  net.ipv6.conf.default.autoconf:
+    value: 0
 
 nova::rabbit_heartbeat_timeout_threshold: 60
 neutron::rabbit_heartbeat_timeout_threshold: 60
